fix: align twitter sing-in account button text

--- a/assets/css/rop_core.css
+++ b/assets/css/rop_core.css
@@ -720,6 +720,10 @@ a.active {
     border-left-color: #fff;
 }
 
+#rop_core .btn.btn-twitter svg {
+    margin-bottom: -2px;
+}
+
 #rop_core .btn.btn-tumblr {
     border-color: #304d69;
     color: #fff;
